gitops/overlays/04-petclinic/01-cicd/04-triggers/01-build-trigger/build-trigger-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app.kubernetes.io/managed-by: EventListener
    app.kubernetes.io/part-of: Triggers
    eventLister: build-listener
  name: build-listener-route
spec:
  port:
    targetPort: listener
  to:
    kind: Service
    name: el-build-listener
    weight: 100
